All Commit for day-3

--- a/Frontend/lenskart/src/Pages/kids/Kids.module.css
+++ b/Frontend/lenskart/src/Pages/kids/Kids.module.css
@@ -1,5 +1,5 @@
 .Kids_Main_Div {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 99%;
     margin: auto;
     margin-top: 20px;
