--- a/Frontend/lenskart/src/Pages/Contact-lens/Contact_Lens.module.css
+++ b/Frontend/lenskart/src/Pages/Contact-lens/Contact_Lens.module.css
@@ -1,6 +1,6 @@
 .Contact_Lens_Main_Section{
     /* border: 1px solid black; */
-    height: 600px;
+    height: auto;
 }
 
 .Order_Contact_Lens_Main_div{
