--- a/Frontend/lenskart/src/Components/ProductCard/ProductCard.module.css
+++ b/Frontend/lenskart/src/Components/ProductCard/ProductCard.module.css
@@ -73,6 +73,7 @@
     padding: 5px 0px 0px 0px;
     letter-spacing: -.02em;
     font-synthesis: none;
+    text-align: left;
     /* border: 1px solid black; */
 }
 
@@ -110,6 +111,7 @@
     /* border: 1px solid black; */
     color: #000042;
     font-weight: 700;
+    text-align: left;
     font-size: 18px;
     line-height: 25px;
     letter-spacing: 0.02rem;
